--- a/_includes/1.0/api/paymentterm.html
+++ b/_includes/1.0/api/paymentterm.html
@@ -1,9 +1,8 @@
 <div id="paymentterm" class="group">
 
     <h2>Payment Terms</h2>
-    {% highlight bash %}
-    Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.payment_terms.url}}
-    {% endhighlight %}
+    {% highlight bash %} Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.payment_terms.url}} {% endhighlight %}
+    <p class="message bg-primary">This API is read only.</p>
     <h3 id="paymenttermjsonformat">JSON Format</h3>
     <p>Payment Terms are represented as JSON objects which have the following keys:</p>
 
@@ -27,8 +26,8 @@
                 <td>The Payment Term Name</td>
             </tr>
         </tbody>
-    </table>  
- 
+    </table>
+
     <h3 id="paymenttermjsonexample">JSON Example</h3>
     {% highlight bash %} {% include 1.0/api/json/paymentterm.json %} {% endhighlight %}
 
