--- a/_includes/1.0/api/unit.html
+++ b/_includes/1.0/api/unit.html
@@ -1,9 +1,8 @@
 <div id="unit" class="group">
 
     <h2>Units</h2>
-    {% highlight bash %}
-    Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.units.url}}
-    {% endhighlight %}
+    {% highlight bash %} Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.units.url}} {% endhighlight %}
+    <p class="message bg-primary">This API is read only.</p>
     <h3 id="unitjsonformat">JSON Format</h3>
     <p>Units are represented as JSON objects which have the following keys:</p>
 
