--- a/_includes/1.0/api/tax.html
+++ b/_includes/1.0/api/tax.html
@@ -1,9 +1,8 @@
 <div id="tax" class="group">
 
     <h2>Taxes</h2>
-    {% highlight bash %}
-    Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.taxes.url}}
-    {% endhighlight %}
+    {% highlight bash %} Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.taxes.url}} {% endhighlight %}
+    <p class="message bg-primary">This API is read only.</p>
     <h3 id="taxjsonformat">JSON Format</h3>
     <p>Taxes are represented as JSON objects which have the following keys:</p>
     <table class="table table-bordered table-striped">
@@ -33,7 +32,7 @@
                 <td>The Tax Rate</td>
             </tr>
         </tbody>
-    </table>  
+    </table>
     <h3 id="taxjsonexample">JSON Example</h3>
     {% highlight bash %} {% include 1.0/api/json/tax.json %} {% endhighlight %}
 
