add read only for currency

--- a/_includes/1.0/api/currency.html
+++ b/_includes/1.0/api/currency.html
@@ -1,9 +1,8 @@
 <div id="currency" class="group">
 
     <h2>Currencies</h2>
-    {% highlight bash %}
-    Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.currencies.url}}
-    {% endhighlight %}
+    {% highlight bash %} Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.currencies.url}} {% endhighlight %}
+    <p class="message bg-primary">This API is read only.</p>
     <h3 id="currencyjsonformat">JSON Format</h3>
     <p>Currencies are represented as JSON objects which have the following keys:</p>
 
@@ -42,7 +41,7 @@
                 <td>Is this currency the main accounting for this domain</td>
             </tr>
         </tbody>
-    </table> 
+    </table>
 
     <h3 id="currencyjsonexample">JSON Example</h3>
     {% highlight bash %} {% include 1.0/api/json/currency.json %} {% endhighlight %}
