--- a/_includes/1.0/overview/general.html
+++ b/_includes/1.0/overview/general.html
@@ -1,108 +1,106 @@
 <div id="general" class="group">
 
-<h2>REST API : General</h2>
+    <h3>Introduction</h3>
 
-<p>This is the documentation for the MyERP v1 API. Read the contents of this page carefully, including the authentication process and the rate &amp; limits described below, to understand how to be a good API citizen and to understand general restrictions and concerns. </p>
+    <p>This is the documentation for the myERP v1 API. Read the contents of this page carefully, including the authentication process and the rate &amp; limits described below, to understand how to be a good API citizen and to understand general restrictions and concerns.</p>
+
+    <p>Your use and access to the API is expressly conditioned on your compliance with the policies, restrictions and other provisions related to the API set forth in our API Restrictions and Responsibilities and the other documentation we provide you. You must also comply with the restrictions set forth in the <a href="https://myerp.com/en/term-of-use-US.html" target="_blank" title="">myERP Terms of Service</a> and the <a href="https://myerp.com/en/privacy-policy.html" title="" target="_blank">myERP Privacy Policy</a>, in all uses of the API. If myERP believes that you have or attempted to violate any term, condition or the spirit of these policies or agreements, your right to access and use the API may be temporarily or permanently revoked.</p>
+
+    <h2>Getting Started</h2>
+
+    <h3>REST API</h3>
+    <p>The API is implemented as JSON using all four verbs (GET/POST/PUT/DELETE). Each resource, like Customer, Item, or Order, has its own URL and is manipulated in isolation. In other words, we’ve tried to make the API follow the REST principles as much as possible.</p>
+
+    <p>For each resource, you can get, create, update, delete an element and also list all the elements. If you are not familiar with the REST API, here is a summary:</p>
+
+    <table class="table table-bordered table-striped">
+        <thead>
+            <tr>
+                <th>Resource</th>
+                <th>GET</th>
+                <th>PUT</th>
+                <th>POST</th>
+                <th>DELETE</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td><b>Collection URI, such as <br />{{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.customers.url}}</b>
+                </td>
+                <td>List all the elements of this collection.
+                    <br />You might need to use the pagination to browse the results.</td>
+                <td>-</td>
+                <td>Create a new element in the collection.
+                    <br />The id of the element is assigned automatically.</td>
+                <td>-</td>
+            </tr>
+            <tr>
+                <td><b>Element URI, such as <br />{{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.customers.url}}/42</b>
+                </td>
+                <td>Retrieve the element 42.</td>
+                <td>Update the element with the id 42.</td>
+                <td>-</td>
+                <td>Delete the element with the id 42.</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <p><b>Note:</b> All the resources are following this schema unless specific informations in the resource documentation page itself (i.e. read-only resources).</p>
 
 
-<h3>Resources</h3>
+    <h3>How we parse the JSON</h3>
+    This is how we parse and interpret the JSON input you send to us, please read these rules carefully:
 
-There's two kind of resources in myERP. The Actual Data from your domain, and those who refers to a kind of data as a whole.
+    <h4>Missing fields</h4>
 
-<br />
-<p><b>Actual Data</b>: They end with the *id* of the actual data they refer to. They describe a single data.</p>
+    <ul>
+        <li><b>Creation</b>: if the missing field is mandatory, an error message will be returned. Otherwise, the default value will be applied.</li>
+        <li><b>Edition</b>: the missing field is ignored, and no changes will be performed on it. If you want to edit a single field, just send this single one.</li>
+    </ul>
 
-{% highlight bash %}
-curl -X GET {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.customers.url}}/55002 {{site.api.auth_pattern}}
-{% endhighlight %}
-*55002* is the *id* of the customer you are trying to get.
-
-Those are mostly used for GET (to retrieve a data), PUT (to edit a data) or DELETE (to delete a data) request.
-<br />
-<p><b>Data Type</b>: There's no id into them. They describe a type of data as a whole.</p>
-
-{% highlight bash %}
-curl -X GET {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.customers.url}} {{site.api.auth_pattern}}
-{% endhighlight %}
-This will retrieve the list of all your customers.
-
-Those are used to create new data of this kind, using POST request.
-They are also useful when you want to create or delete several datas of a specific kind in a row.
+    <h4>Non existant fields</h4>
+    <ul>
+        <li>If your JSON contains any fields that are not managed by the resource, those fields will be ignored. So, beware of any typo.</li>
+    </ul>
 
 
-<h3>JSON Fields</h3>
+    <h4>Duplicates fields</h4>
+    <ul>
+        <li>If a field is duplicate within the JSON or a resource, the value of the last one will prevail.</li>
+    </ul>
 
-<h4>Missing fields</h4>
 
-* Creation: if the missing field is mandatory, an error message will be returned. Otherwise, the default value will be applied.
-* Edition: the missing field is ignored, and no changes will be performed on it. If you want to edit a single field, just send this single one.
+    <h4>Wrong values</h4>
+    <ul>
+        <li>
+            <b>Bad type</b>: If any value of a wrong type stands into your JSON, the parsing of the JSON will turn wrong and an error message will be returned.
+        </li>
+        <li><b>Wrong value</b>: Some fields only accept certain values. If the value of such a field is wrong in your JSON, an error message will be returned.</li>
+        <li><b>Non editable</b>: While editing a resource, if any field that is not editable stands within your JSON, and tries to perform an actual modification, an error message will be returned.
+        </li>
+    </ul>
+    <h4>Lists</h4>
 
-<h4> Non existant fields</h4>
+    A field can consist in a list of data of another kind, with their own JSON format (like customer's contact list). While editing such a list, the list you send will become the whole new list. Which means the following:
+    <ul>
+        <li>Data that don't appear anymore in the new list will be deleted.</li>
+        <li>Data that are in both the old and new list will be edited.</li>
+        <li>Data that are only in the new list will be created.</li>
+    </ul>
 
-If your JSON contains any fields that are not managed by the resource, those fields will be ignored. So, beware of any typo.
+    Also, please notice that:
+    <ul>
+        <li>Matching are performed on data's ID.</li>
+        <li>Sending an empty list will <b>delete the whole list</b>
+        </li>
+        <li>Like other fields, omitting the field wont perform any changes on the list.</li>
+    </ul>
 
-<h4>Duplicates fields</h4>
 
-If a field is duplicate within the JSON or a resource, the value of the last one will prevail.
-
-<h4> Wrong values</h4>
-
-* Bad type: If any value of a wrong type stands into your JSON, the parsing of the JSON will turn wrong and an error message will be returned.
-* Wrong value: Some fields only accept certain values. If the value of such a field is wrong in your JSON, an error message will be returned.
-* Non editable: While editing a resource, if any field that is not editable stands within your JSON, and tries to perform an actual modification, an error message will be returned.
-
-<h4> Lists</h4>
-
-A field can consist in a list of data of another kind, with their own JSON format (like customer's contact list).
-While editing such a list, the list you send will become the whole new list. Which means the following :
-
-* Data that don't appear anymore in the new list will be deleted.
-* Data that are in both the old and new list will be edited.
-* Data that are only in the new list will be created.
-
-Also, please notice that :
-
-* Matching are performed on data's ID.
-* Sending an empty list will *delete the whole list*.
-* Like other fields, omitting the field wont perform any changes on the list.
-
- Example on customer contacts list field
-
-If the current contact list is :
-
-{% highlight bash %}
-contacts: [
-  {
-    "id": 48,
-    "first_name": "Ed",
-    "last_name": "Smith",
-    "email": "ed.smith@myerp.com"
-  },
-  {
-    "id": 49,
-    "first_name": "John",
-    "last_name": "Doe",
-    "email": "john.doe@myerp.com"
-  }
-]
-{% endhighlight %}
-
-The following POST...
-
-{% highlight bash %}
-contacts: [
-  {
-    "id": 49,
-    "email": "new.email@myerp.com"
-  },
-  {
-    "first_name": "James",
-    "last_name": "Brown",
-    "email": "james.brown@myerp.com"
-  }
-]
-{% endhighlight %}
-
-...will delete contact 48 (Ed Smith), edit the email of contact 49 (John Doe), and create the brand new contact James Brown.
+    Example on customer contacts list field If the current contact list is : 
+    {% highlight bash %} contacts: [ { "id": 48, "first_name": "Ed", "last_name": "Smith", "email": "ed.smith@myerp.com" }, { "id": 49, "first_name": "John", "last_name": "Doe", "email": "john.doe@myerp.com" } ] {% endhighlight %} 
+    The following POST... 
+    {% highlight bash %} contacts: [ { "id": 49, "email": "new.email@myerp.com" }, { "first_name": "James", "last_name": "Brown", "email": "james.brown@myerp.com" } ] {% endhighlight %} 
+    ...will delete contact 48 (Ed Smith), edit the email of contact 49 (John Doe), and create the brand new contact James Brown.
 
 </div>
