--- a/_includes/1.0/overview/security.html
+++ b/_includes/1.0/overview/security.html
@@ -5,7 +5,7 @@
 
 <h3>Retrieving the API key</h3>
 
-<p>To retrieve your API email and your API key, you have to log in into your account, then go to <b>Settings > API settings and click on the Generate Key button</b>.</p>
+<p>To retrieve your API email and your API key, you have to log in into your account, then go to <b>Settings > API settings</b> and click on the <b>Generate Key</b> button.</p>
 
 <img src="/img/api_settings.png" alt="api settings" />
 
@@ -17,6 +17,6 @@ curl {{ site.api.base_url }}{{ site.api.v1}}.. {{site.api.auth_pattern}}
 
 Example:
 {% highlight bash %}
-curl {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.accounts.url}} -u "api_12_e3ab@api.myerp.com:34a352e421d03a4qXqc91f9b48ed7eb02e5"
+curl {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.customers.url}} -u "api_12_e3ab@api.myerp.com:34a352e421d03a4qXqc91f9b48ed7eb02e5"
 {% endhighlight %}
 </div>
