--- a/_includes/side-menu.html
+++ b/_includes/side-menu.html
@@ -4,15 +4,19 @@
 <li>
     <a class="category" href="/docs/1.0/overview/">Overview</a>
     <ul class="nav nav-stacked">
-        <li><a href="#general">How to use the myERP API</a>
+        <li><a href="#general">Getting Started</a>
         </li>
         <li><a href="#security">Security and Authentication</a>
+        </li>
+        <li><a href="#pagination">Pagination</a>
         </li>
         <li><a href="#ratelimiting">Rate Limiting and limits</a>
         </li>
         <li><a href="#errorcode">Error Code and Responses</a>
         </li>
         <li><a href="#glossary">Glossary</a>
+        </li>
+        <li><a href="#changepolicy">Change Policy</a>
         </li>
         <li><a href="#support">Support</a>
         </li>
