update broken links

--- a/_includes/1.0/api/customer.html
+++ b/_includes/1.0/api/customer.html
@@ -93,7 +93,7 @@
                 <td>{{ site.format.type.integer}}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>The ID of the <a href="/docs/1.0/api/payment_term/" title="">Payment terms</a>
+                <td>The ID of the <a href="/docs/1.0/api/#paymentterm" title="">Payment terms</a>
                     <br/>by default, Due on receipt will be selected.
                 </td>
             </tr>
@@ -102,7 +102,7 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>The ISO Code of one of <a href="/docs/1.0/api/currency/" title="">your Currencies</a>
+                <td>The ISO Code of one of <a href="/docs/1.0/api/#currency" title="">your Currencies</a>
                     <br/>by default, the domain currency will be selected.
                 </td>
             </tr>
@@ -111,7 +111,7 @@
                 <td>{{ site.format.type.integer}}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>IDs from <a href="/docs/1.0/api/tax/" title="">Taxes</a>
+                <td>IDs from <a href="/docs/1.0/api/#tax" title="">Taxes</a>
                 </td>
             </tr>
             <tr>
