fix broken links

--- a/_includes/1.0/api/productservice.html
+++ b/_includes/1.0/api/productservice.html
@@ -34,7 +34,7 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>no</td>
-                <td>The name/td>
+                <td>The name</td>
             </tr>
             <tr>
                 <td>unit_id</td>
