--- a/_includes/1.0/api/vendor.html
+++ b/_includes/1.0/api/vendor.html
@@ -76,7 +76,7 @@
                 <td>{{ site.format.type.integer}}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>The ID of the <a href="/docs/1.0/api/payment_term/" title="">Payment terms</a>
+                <td>The ID of the <a href="/docs/1.0/api/#paymentterm" title="">Payment terms</a>
                     <br/>by default, Due on receipt will be selected.
                 </td>
             </tr>
@@ -85,7 +85,7 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>The ISO Code of one of <a href="/docs/1.0/api/currency/" title="">your Currencies</a>
+                <td>The ISO Code of one of <a href="/docs/1.0/api/#currency" title="">your Currencies</a>
                     <br/>by default, the domain currency will be selected.
                 </td>
             </tr>
