add default format for date in the config file

--- a/_includes/1.0/api/transaction.html
+++ b/_includes/1.0/api/transaction.html
@@ -31,7 +31,8 @@
                 <td>{{ site.format.type.date }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>Date of the day by default</td>
+                <td>Today by default.
+                <br />Format: {{ site.format.date }}</td>
             </tr>
             <tr>
                 <td>journal_id</td>
