don't break the history state with the scroll top

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -30,6 +30,7 @@ $(window).load(function() {
                 var target = $(this.hash);
                 target = target.length ? target : $('[name=' + this.hash.slice(1) + ']');
                 if (target.length) {
+                    history.pushState({}, '', this.hash);
                     $('html,body').animate({
                         scrollTop: target.offset().top
                     }, 1000);
