--- a/_includes/1.0/api/nestedelements.html
+++ b/_includes/1.0/api/nestedelements.html
@@ -119,7 +119,7 @@
                     <td>The full name of this contact</td>
                 </tr>
                 <tr>
-                    <td>cell_number</td>
+                    <td>cell_phone</td>
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>no</td>
