Currency 'main_currency' become 'is_main_currency'.

--- a/_includes/1.0/api/currency.html
+++ b/_includes/1.0/api/currency.html
@@ -34,7 +34,7 @@
                 <td>The Currency Name</td>
             </tr>
             <tr>
-                <td>main_currency</td>
+                <td>is_main_currency</td>
                 <td>{{ site.format.type.boolean }}</td>
                 <td>no</td>
                 <td>no</td>
