Use 'note' instead of 'notes' or 'comment'.

--- a/_includes/1.0/api/customer.html
+++ b/_includes/1.0/api/customer.html
@@ -129,11 +129,11 @@
                 <td>Opt-in to Emails. Default: false</td>
             </tr>
             <tr>
-                <td>comment</td>
+                <td>note</td>
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>A comment about this customer</td>
+                <td>A note about this customer</td>
             </tr>
             <tr>
                 <td>employee_id</td>
