--- a/_includes/1.0/api/nestedelements.html
+++ b/_includes/1.0/api/nestedelements.html
@@ -154,7 +154,7 @@
                     <td>The address of this contact</td>
                 </tr>
                 <tr>
-                    <td>notes</td>
+                    <td>note</td>
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>no</td>
