--- a/_includes/1.0/api/vendor.html
+++ b/_includes/1.0/api/vendor.html
@@ -97,7 +97,7 @@
                 <td>The number assigned to this vendor (i.e. SUP-002). If you don't specify a vendor number, it will be automatically generated</td>
             </tr>
             <tr>
-                <td>notes</td>
+                <td>note</td>
                 <td>{{ site.format.type.text }}</td>
                 <td>no</td>
                 <td>no</td>
