Add Bank Entry API to the documentation.

--- a/_includes/side-menu.html
+++ b/_includes/side-menu.html
@@ -106,6 +106,18 @@
                 </li>
             </ul>
         </li>
+        <!-- bank entries -->
+        <li>
+            <a href="#bankentry">Bank Entries <span>(No PUT)</span></a>
+            <ul class="nav nav-stacked">
+                <li><a href="#bankentryjsonformat">JSON Format</a>
+                </li>
+                <li><a href="#bankentryjsonexample">JSON Example</a>
+                </li>
+                <li><a href="#bankentryavailablemethods">Available Methods</a>
+                </li>
+            </ul>
+        </li>
         <!-- accounts -->
         <li>
             <a href="#account">Accounts <span>(Read-only)</span></a>
