--- a/_includes/1.0/api/account.html
+++ b/_includes/1.0/api/account.html
@@ -8,42 +8,32 @@
 
     <table class="table table-bordered table-striped">
         <thead>
-            {% include table-header.html %}
+            {% include table-header-readonly.html %}
         </thead>
         <tbody>
             <tr>
                 <td>id</td>
                 <td>{{ site.format.type.integer }}</td>
-                <td>no</td>
-                <td>yes</td>
                 <td>Automatically assigned</td>
             </tr>
             <tr>
                 <td>number</td>
                 <td>{{ site.format.type.string }}</td>
-                <td>yes</td>
-                <td>yes</td>
                 <td>The Number of this account</td>
             </tr>
             <tr>
                 <td>name</td>
                 <td>{{ site.format.type.string }}</td>
-                <td>yes</td>
-                <td>yes</td>
                 <td>The Name of this account</td>
             </tr>
             <tr>
                 <td>is_family</td>
                 <td>{{ site.format.type.boolean }}</td>
-                <td>yes</td>
-                <td>yes</td>
                 <td>Is this account a family account.</td>
             </tr>
             <tr>
                 <td>family_id</td>
                 <td>{{ site.format.type.integer }}</td>
-                <td>yes</td>
-                <td>yes</td>
                 <td>Code of this account's family</td>
             </tr>
         </tbody>
