--- a/_includes/1.0/api/currency.html
+++ b/_includes/1.0/api/currency.html
@@ -8,36 +8,28 @@
 
     <table class="table table-bordered table-striped">
         <thead>
-            {% include table-header.html %}
+            {% include table-header-readonly.html %}
         </thead>
         <tbody>
             <tr>
                 <td>id</td>
                 <td>{{ site.format.type.integer }}</td>
-                <td>no</td>
-                <td>yes</td>
                 <td>Automatically assigned</td>
             </tr>
             <tr>
                 <td>iso_code</td>
                 <td>{{ site.format.type.string }}</td>
-                <td>yes</td>
-                <td>yes</td>
                 <td>The ISO code of the currency <a href="http://www.iso.org/iso/catalogue_detail?csnumber=46121" target="_blank" title="ISO 4217">(ISO 4217)</a>
                 </td>
             </tr>
             <tr>
                 <td>name</td>
                 <td>{{ site.format.type.string }}</td>
-                <td>yes</td>
-                <td>yes</td>
                 <td>The Currency Name</td>
             </tr>
             <tr>
                 <td>is_main_currency</td>
                 <td>{{ site.format.type.boolean }}</td>
-                <td>no</td>
-                <td>no</td>
                 <td>Is this currency the main accounting for this domain</td>
             </tr>
         </tbody>
