Add bulk deletion documentation

--- a/_includes/1.0/overview/general.html
+++ b/_includes/1.0/overview/general.html
@@ -32,7 +32,7 @@
                 <td>-</td>
                 <td>Create a new element in the collection.
                     <br />The id of the element is assigned automatically.</td>
-                <td>-</td>
+                <td>Delete multiple elements. <a href="#bulkdeletion" title="">Learn more</a>.</td>
             </tr>
             <tr>
                 <td><b>Element URI, such as <br />{{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.customers.url}}/42</b>
