--- a/_includes/side-menu.html
+++ b/_includes/side-menu.html
@@ -14,6 +14,8 @@
         </li>
         <li><a href="#errorcode">Error Code and Responses</a>
         </li>
+        <li><a href="#bulkdeletion">Bulk Deletion</a>
+        </li>
         <li><a href="#changepolicy">Change Policy</a>
         </li>
         <li><a href="#support">Support</a>
