Removes 'no PUT' from the Bank Entries left-menu.

--- a/_includes/side-menu.html
+++ b/_includes/side-menu.html
@@ -108,7 +108,7 @@
         </li>
         <!-- bank entries -->
         <li>
-            <a href="#bankentry">Bank Entries <span>(No PUT)</span></a>
+            <a href="#bankentry">Bank Entries</a>
             <ul class="nav nav-stacked">
                 <li><a href="#bankentryjsonformat">JSON Format</a>
                 </li>
