Use <br /> instead of <BR/>

--- a/_includes/1.0/api/bankentry.html
+++ b/_includes/1.0/api/bankentry.html
@@ -23,14 +23,14 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>yes</td>
-                <td>Use primilary for Sync.<BR/></td>
+                <td>Use primilary for Sync.<br /></td>
             </tr>
             <tr>
                 <td>bank_account_id</td>
                 <td>{{ site.format.type.integer }}</td>
                 <td>yes</td>
                 <td>yes</td>
-                <td>Code of the Bank Account that entry belongs to.<BR/></td>
+                <td>Code of the Bank Account that entry belongs to.<br /></td>
             </tr>
             <tr>
                 <td>posted_date</td>
@@ -51,7 +51,7 @@
                 <td>{{ site.format.type.double }}</td>
                 <td>yes</td>
                 <td>yes</td>
-                <td>Amount of the bank transaction. Use negative amount for debit.<BR/>Should not be 0.00</td>
+                <td>Amount of the bank transaction. Use negative amount for debit.<br />Should not be 0.00</td>
             </tr>
             <tr>
                 <td>currency_iso_code</td>
@@ -72,7 +72,7 @@
                 <td>{{ site.format.type.integer }}</td>
                 <td>no</td>
                 <td>yes</td>
-                <td>Code of the payment method.<BR/>Default: 1 (check)</td>
+                <td>Code of the payment method.<br />Default: 1 (check)</td>
             </tr>
         </tbody>
     </table>
