Add data format on Bank Entries documentation.

--- a/_includes/1.0/api/bankentry.html
+++ b/_includes/1.0/api/bankentry.html
@@ -37,14 +37,14 @@
                 <td>{{ site.format.type.date }}</td>
                 <td>yes</td>
                 <td>yes</td>
-                <td>The date that entry was posted.</td>
+                <td>The date that entry was posted.<br />Format: {{site.format.date}}</td>
             </tr>
             <tr>
                 <td>transaction_date</td>
                 <td>{{ site.format.type.date }}</td>
                 <td>yes</td>
                 <td>yes</td>
-                <td>The date the bank transaction was actually performed.</td>
+                <td>The date the bank transaction was actually performed.<br />Format: {{site.format.date}}</td>
             </tr>
             <tr>
                 <td>amount</td>
