Add list of default units to the Unit API documentation.

--- a/_includes/1.0/api/unit.html
+++ b/_includes/1.0/api/unit.html
@@ -42,6 +42,83 @@
             </tr>
         </tbody>
     </table>
+	<h3 id="unitjsonexample">Default values</h3>
+    <table class="table table-bordered table-striped">
+        <thead>
+			<tr>
+			    <th class="id">id</th>
+			    <th class="value">Value</th>
+				<th class="value">Value (FR only)</th>
+			</tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+				<td>Piece</td>
+                <td>Pièce</td>
+            </tr>
+            <tr>
+                <td>2</td>
+				<td>Pound</td>
+                <td>Kilogramme</td>
+            </tr>
+            <tr>
+                <td>3</td>
+				<td>Meter</td>
+                <td>Mètre</td>
+            </tr>
+            <tr>
+                <td>4</td>
+				<td>Square foot</td>
+                <td>Mètre carré</td>
+            </tr>
+            <tr>
+                <td>5</td>
+				<td>Cubic meter</td>
+                <td>Mètre cube</td>
+            </tr>
+            <tr>
+                <td>6</td>
+				<td>Liter</td>
+                <td>Litre</td>
+            </tr>
+            <tr>
+                <td>7</td>
+				<td>Hour</td>
+                <td>Heure</td>
+            </tr>
+            <tr>
+                <td>8</td>
+				<td>Day</td>
+                <td>Jour</td>
+            </tr>
+            <tr>
+                <td>9</td>
+				<td>Month</td>
+                <td>Mois</td>
+            </tr>
+            <tr>
+                <td>10</td>
+				<td>Quarter</td>
+                <td>Trimestre</td>
+            </tr>
+            <tr>
+                <td>11</td>
+				<td>Year</td>
+                <td>Année</td>
+            </tr>
+            <tr>
+                <td>12</td>
+				<td>Ounce</td>
+                <td>Gramme</td>
+            </tr>
+            <tr>
+                <td>13</td>
+				<td>Centiliter</td>
+                <td>Centilitre</td>
+            </tr>
+        </tbody>
+    </table>
     <h3 id="unitjsonexample">JSON Example</h3>
     {% highlight bash %} {% include 1.0/api/json/unit.json %} {% endhighlight %}
 
