Add maximum characters in the description

--- a/_includes/1.0/api/currency.html
+++ b/_includes/1.0/api/currency.html
@@ -23,7 +23,7 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>yes</td>
-                <td>The ISO code of the currency <a href="http://www.iso.org/iso/catalogue_detail?csnumber=46121" target="_blank" title="ISO 4217">(ISO 4217)</a>
+                <td>The ISO code of the currency <a href="http://www.iso.org/iso/catalogue_detail?csnumber=46121" target="_blank" title="ISO 4217">(ISO 4217)</a>. 4 characters max.
                 </td>
             </tr>
             <tr>
@@ -31,7 +31,7 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>yes</td>
-                <td>The Currency Name</td>
+                <td>The Currency Name. 64 characters max.</td>
             </tr>
             <tr>
                 <td>main_currency</td>
