--- a/_includes/1.0/api/customer.html
+++ b/_includes/1.0/api/customer.html
@@ -44,7 +44,7 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>yes</td>
-                <td>The full name of this customer (automatically generated)</td>
+                <td>The full name of this customer (automatically generated).</td>
             </tr>
             <tr>
                 <td>address</td>
@@ -65,21 +65,21 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>The phone number of this customer</td>
+                <td>The phone number of this customer. 64 characters max.</td>
             </tr>
             <tr>
                 <td>email</td>
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>The Email address of this customer</td>
+                <td>The Email address of this customer. 255 characters max.</td>
             </tr>
             <tr>
                 <td>website</td>
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>The URL of the customer's website</td>
+                <td>The URL of the customer's website. 255 characters max.</td>
             </tr>
             <tr>
                 <td>contacts</td>
@@ -103,7 +103,7 @@
                 <td>no</td>
                 <td>no</td>
                 <td>The ISO Code of one of <a href="/docs/1.0/api/#currency" title="">your Currencies</a>
-                    <br/>by default, the domain currency will be selected.
+                    <br/>by default, the domain currency will be selected. 4 characters max.
                 </td>
             </tr>
             <tr>
@@ -119,7 +119,7 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>The number assigned to this customer (i.e. CUS-002). If you don't specify a customer number, it will be automatically generated</td>
+                <td>The number assigned to this customer (i.e. CUS-002). If you don't specify a customer number, it will be automatically generated. 64 characters max.</td>
             </tr>
             <tr>
                 <td>opt_in_to_emails</td>
@@ -160,7 +160,7 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>no</td>
-                <td>The name of the company</td>
+                <td>The name of the company. 255 characters max.</td>
             </tr>
             <tr>
                 <td>employee_count</td>
@@ -200,21 +200,21 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>The First Name of the customer</td>
+                <td>The First Name of the customer. 255 characters max.</td>
             </tr>
             <tr>
                 <td>last_name</td>
                 <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>no</td>
-                <td>The Last Name of the customer</td>
+                <td>The Last Name of the customer. 255 characters max.</td>
             </tr>
             <tr>
                 <td>middle_name</td>
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>The Middle Name of the customer</td>
+                <td>The Middle Name of the customer. 255 characters max.</td>
             </tr>
         </tbody>
     </table>
