--- a/_includes/1.0/api/paymentterm.html
+++ b/_includes/1.0/api/paymentterm.html
@@ -23,7 +23,7 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>yes</td>
-                <td>The Payment Term Name</td>
+                <td>The Payment Term Name. 64 characters max.</td>
             </tr>
         </tbody>
     </table>
