--- a/_includes/1.0/api/productservice.html
+++ b/_includes/1.0/api/productservice.html
@@ -34,7 +34,7 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>no</td>
-                <td>The name</td>
+                <td>The name. 255 characters max.</td>
             </tr>
             <tr>
                 <td>unit_id</td>
@@ -59,7 +59,7 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>A unique user-facing id (i.e. ITM-012) If you don't specify a product number, it will be automatically generated</td>
+                <td>A unique user-facing id (i.e. ITM-012) If you don't specify a product number, it will be automatically generated. 64 characters max.</td>
             </tr>
             <tr>
                 <td>description</td>
