--- a/_includes/1.0/api/project.html
+++ b/_includes/1.0/api/project.html
@@ -24,7 +24,7 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>no</td>
-                <td>The Project Name</td>
+                <td>The Project Name. 128 characters max.</td>
             </tr>
             <tr>
                 <td>description</td>
