--- a/_includes/1.0/api/tax.html
+++ b/_includes/1.0/api/tax.html
@@ -22,7 +22,7 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>yes</td>
-                <td>The Tax Name</td>
+                <td>The Tax Name. 128 characters max.</td>
             </tr>
             <tr>
                 <td>rate</td>
