--- a/_includes/1.0/api/transaction.html
+++ b/_includes/1.0/api/transaction.html
@@ -45,7 +45,7 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>no</td>
-                <td>A unique user-facing id of the document linked to this transaction</td>
+                <td>A unique user-facing id of the document linked to this transaction. 64 characters max.</td>
             </tr>
             <tr>
                 <td>entries</td>
@@ -72,7 +72,7 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>The description of the Entry</td>
+                <td>The description of the Entry. 128 characters max.</td>
             </tr>
             <tr>
                 <td>amount</td>
@@ -108,7 +108,7 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>The lettering of this entry</td>
+                <td>The lettering of this entry. 64 characters max.</td>
             </tr>
 
         </tbody>
