--- a/_includes/1.0/api/unit.html
+++ b/_includes/1.0/api/unit.html
@@ -24,7 +24,7 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>yes</td>
-                <td>The Unit Name</td>
+                <td>The Unit Name. 64 characters max.</td>
             </tr>
             <tr>
                 <td>type</td>
