--- a/_includes/1.0/api/vendor.html
+++ b/_includes/1.0/api/vendor.html
@@ -48,21 +48,21 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>The phone number of this vendor</td>
+                <td>The phone number of this vendor. 64 characters max.</td>
             </tr>
             <tr>
                 <td>email</td>
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>The Email address of this vendor</td>
+                <td>The Email address of this vendor. 255 characters max.</td>
             </tr>
             <tr>
                 <td>website</td>
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>The URL of the vendor's website</td>
+                <td>The URL of the vendor's website. 255 characters max.</td>
             </tr>
             <tr>
                 <td>contacts</td>
@@ -86,7 +86,7 @@
                 <td>no</td>
                 <td>no</td>
                 <td>The ISO Code of one of <a href="/docs/1.0/api/#currency" title="">your Currencies</a>
-                    <br/>by default, the domain currency will be selected.
+                    <br/>by default, the domain currency will be selected. 4 characters max.
                 </td>
             </tr>
             <tr>
@@ -94,7 +94,7 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>The number assigned to this vendor (i.e. SUP-002). If you don't specify a vendor number, it will be automatically generated</td>
+                <td>The number assigned to this vendor (i.e. SUP-002). If you don't specify a vendor number, it will be automatically generated. 64 characters max.</td>
             </tr>
             <tr>
                 <td>notes</td>
@@ -128,7 +128,7 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>no</td>
-                <td>The name of the company</td>
+                <td>The name of the company. 255 characters max.</td>
             </tr>
         </tbody>
     </table>
@@ -147,21 +147,21 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>The First Name of the vendor</td>
+                <td>The First Name of the vendor. 255 characters max.</td>
             </tr>
             <tr>
                 <td>last_name</td>
                 <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>no</td>
-                <td>The Last Name of the vendor</td>
+                <td>The Last Name of the vendor. 255 characters max.</td>
             </tr>
             <tr>
                 <td>middle_name</td>
                 <td>{{ site.format.type.string }}</td>
                 <td>no</td>
                 <td>no</td>
-                <td>The Middle Name of the vendor</td>
+                <td>The Middle Name of the vendor. 255 characters max.</td>
             </tr>
         </tbody>
     </table>
