--- a/_includes/1.0/api/account.html
+++ b/_includes/1.0/api/account.html
@@ -23,14 +23,14 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>yes</td>
-                <td>The Number of this account</td>
+                <td>The Number of this account. 64 characters max.</td>
             </tr>
             <tr>
                 <td>name</td>
                 <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>yes</td>
-                <td>The Name of this account</td>
+                <td>The Name of this account. 128 characters max.</td>
             </tr>
             <tr>
                 <td>is_family</td>
