--- a/_includes/1.0/api/nestedelements.html
+++ b/_includes/1.0/api/nestedelements.html
@@ -16,56 +16,56 @@
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>no</td>
-                    <td>First line of the address</td>
+                    <td>First line of the address. 255 characters max.</td>
                 </tr>
                 <tr>
                     <td>label2</td>
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>no</td>
-                    <td>Second line of the address</td>
+                    <td>Second line of the address. 255 characters max.</td>
                 </tr>
                 <tr>
                     <td>label3</td>
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>no</td>
-                    <td>Third line of the address</td>
+                    <td>Third line of the address. 255 characters max.</td>
                 </tr>
                 <tr>
                     <td>zip_code</td>
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>no</td>
-                    <td>The zip code of the address</td>
+                    <td>The zip code of the address. 128 characters max.</td>
                 </tr>
                 <tr>
                     <td>city</td>
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>no</td>
-                    <td>The city of the address</td>
+                    <td>The city of the address. 128 characters max.</td>
                 </tr>
                 <tr>
                     <td>country</td>
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>no</td>
-                    <td>The country of the address</td>
+                    <td>The country of the address. 128 characters max.</td>
                 </tr>
                 <tr>
                     <td>localisation</td>
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>no</td>
-                    <td>The localisaton of the address (limited to the one from the country selected)</td>
+                    <td>The localisaton of the address (limited to the one from the country selected). 255 characters max.</td>
                 </tr>
                 <tr>
                     <td>short_localisation</td>
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>yes</td>
-                    <td>The short code for the Country</td>
+                    <td>The short code for the Country. 10 characters max.</td>
                 </tr>
                 <tr>
                     <td>full_address</td>
@@ -102,14 +102,14 @@
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>no</td>
-                    <td>The First Name of the contact</td>
+                    <td>The First Name of the contact. 255 characters max.</td>
                 </tr>
                 <tr>
                     <td>last_name</td>
                     <td>{{ site.format.type.string }}</td>
                     <td>yes</td>
                     <td>no</td>
-                    <td>The Last Name of the contact</td>
+                    <td>The Last Name of the contact. 255 characters max.</td>
                 </tr>
                 <tr>
                     <td>full_name</td>
@@ -123,28 +123,28 @@
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>no</td>
-                    <td>The Cell phone of this contact</td>
+                    <td>The Cell phone of this contact. 128 characters max.</td>
                 </tr>
                 <tr>
                     <td>work_phone</td>
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>no</td>
-                    <td>The Work phone of this contact</td>
+                    <td>The Work phone of this contact. 128 characters max.</td>
                 </tr>
                 <tr>
                     <td>home_phone</td>
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>no</td>
-                    <td>The Home phone of this contact</td>
+                    <td>The Home phone of this contact. 128 characters max.</td>
                 </tr>
                 <tr>
                     <td>email</td>
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>no</td>
-                    <td>The Email address of this contact</td>
+                    <td>The Email address of this contact. 255 characters max.</td>
                 </tr>
                 <tr>
                     <td>address</td>
