--- a/_includes/1.0/api/productservicefamily.html
+++ b/_includes/1.0/api/productservicefamily.html
@@ -25,14 +25,14 @@
                 <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
                 <td>no</td>
-                <td>The Family Name</td>
+                <td>The Family Name. 64 characters max.</td>
             </tr>
             <tr>
                 <td>code</td>
                 <td>{{ site.format.type.text }}</td>
                 <td>yes</td>
                 <td>no</td>
-                <td>The Short Code of the Family. Automatically generated</td>
+                <td>The Short Code of the Family. Automatically generated. 64 characters max.</td>
             </tr>
         </tbody>
     </table>
