--- a/_includes/1.0/api/account.html
+++ b/_includes/1.0/api/account.html
@@ -2,7 +2,6 @@
 
     <h2>Accounts</h2>
     {% highlight bash %} Endpoint: {{ site.api.base_url }}{{ site.api.v1}}{{ site.resource.accounts.url}} {% endhighlight %}
-    <p class="message bg-primary">This API is read only.</p>
     <h3 id="accountjsonformat">JSON Format</h3>
     <p>Accounts are represented as JSON objects which have the following keys:</p>
 
@@ -22,14 +21,14 @@
                 <td>number</td>
                 <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
-                <td>yes</td>
+                <td>no</td>
                 <td>The Number of this account. 64 characters max.</td>
             </tr>
             <tr>
                 <td>name</td>
                 <td>{{ site.format.type.string }}</td>
                 <td>yes</td>
-                <td>yes</td>
+                <td>no</td>
                 <td>The Name of this account. 128 characters max.</td>
             </tr>
             <tr>
@@ -43,7 +42,7 @@
                 <td>family_id</td>
                 <td>{{ site.format.type.integer }}</td>
                 <td>yes</td>
-                <td>yes</td>
+                <td>no</td>
                 <td>Code of this account's family</td>
             </tr>
         </tbody>
@@ -53,5 +52,5 @@
     {% highlight bash %} {% include 1.0/api/json/account.json %} {% endhighlight %}
 
     <h3 id="accountavailablemethods">Available Methods</h3>
-    {% include 1.0/api/methods/readonly.html %}
+    {% include 1.0/api/methods/full.html %}
 </div>
