--- a/_includes/side-menu.html
+++ b/_includes/side-menu.html
@@ -176,6 +176,8 @@
                 </li>
                 <li><a href="#contact">Contact</a>
                 </li>
+                <li><a href="#orderline">Order line</a>
+                </li>
             </ul>
         </li>
     </ul>
