Add sales order to the documentation.
Remove old version.

--- a/_includes/side-menu.html
+++ b/_includes/side-menu.html
@@ -96,6 +96,18 @@
                 </li>
             </ul>
         </li>
+        <!-- sales orders -->
+        <li>
+            <a href="#salesorder">Sales order</a>
+            <ul class="nav nav-stacked">
+                <li><a href="#salesorderjsonformat">JSON Format</a>
+                </li>
+                <li><a href="#salesorderjsonexample">JSON Example</a>
+                </li>
+                <li><a href="#salesorderavailablemethods">Available Methods</a>
+                </li>
+            </ul>
+        </li>		
         <!-- transactions -->
         <li>
             <a href="#transaction">Accounting Transactions</a>
