Add invoices to the Documentation.

--- a/_includes/side-menu.html
+++ b/_includes/side-menu.html
@@ -108,6 +108,18 @@
                 </li>
             </ul>
         </li>		
+        <!-- invoices -->
+        <li>
+            <a href="#invoice">Invoice</a>
+            <ul class="nav nav-stacked">
+                <li><a href="#invoicejsonformat">JSON Format</a>
+                </li>
+                <li><a href="#invoicejsonexample">JSON Example</a>
+                </li>
+                <li><a href="#invoiceavailablemethods">Available Methods</a>
+                </li>
+            </ul>
+        </li>
         <!-- transactions -->
         <li>
             <a href="#transaction">Accounting Transactions</a>
