Add payments to the documentation.

--- a/_includes/1.0/api/invoice.html
+++ b/_includes/1.0/api/invoice.html
@@ -203,7 +203,7 @@
                 <td>array[{{ site.format.type.integer }}]</td>
                 <td>no</td>
                 <td>yes</td>
-                <td>Array of Ids of Payments made on that invoice.</td>
+                <td>Array of Ids of <a href="/docs/1.0/api/#payment" title="">Payments</a> made on that invoice.</td>
             </tr>			
         </tbody>
     </table>
