--- a/_includes/side-menu.html
+++ b/_includes/side-menu.html
@@ -120,6 +120,18 @@
                 </li>
             </ul>
         </li>
+        <!-- payments -->
+        <li>
+            <a href="#payment">Payment</a>
+            <ul class="nav nav-stacked">
+                <li><a href="#paymentjsonformat">JSON Format</a>
+                </li>
+                <li><a href="#paymentjsonexample">JSON Example</a>
+                </li>
+                <li><a href="#paymentavailablemethods">Available Methods</a>
+                </li>
+            </ul>
+        </li>
         <!-- transactions -->
         <li>
             <a href="#transaction">Accounting Transactions</a>
