--- a/_includes/1.0/api/nestedelements.html
+++ b/_includes/1.0/api/nestedelements.html
@@ -12,28 +12,28 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>label1</td>
+                    <td>street_line1</td>
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>no</td>
                     <td>First line of the address. 255 characters max.</td>
                 </tr>
                 <tr>
-                    <td>label2</td>
+                    <td>street_line2</td>
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>no</td>
                     <td>Second line of the address. 255 characters max.</td>
                 </tr>
                 <tr>
-                    <td>label3</td>
+                    <td>street_line3</td>
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>no</td>
                     <td>Third line of the address. 255 characters max.</td>
                 </tr>
                 <tr>
-                    <td>zip_code</td>
+                    <td>postal_code</td>
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>no</td>
@@ -54,14 +54,14 @@
                     <td>The country of the address. 128 characters max.</td>
                 </tr>
                 <tr>
-                    <td>localisation</td>
+                    <td>locality</td>
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>no</td>
                     <td>The localisaton of the address (limited to the one from the country selected). 255 characters max.</td>
                 </tr>
                 <tr>
-                    <td>short_localisation</td>
+                    <td>short_locality</td>
                     <td>{{ site.format.type.string }}</td>
                     <td>no</td>
                     <td>yes</td>
