add plural in the side menu

--- a/_includes/side-menu.html
+++ b/_includes/side-menu.html
@@ -98,7 +98,7 @@
         </li>
         <!-- sales orders -->
         <li>
-            <a href="#salesorder">Sales order</a>
+            <a href="#salesorder">Sales orders</a>
             <ul class="nav nav-stacked">
                 <li><a href="#salesorderjsonformat">JSON Format</a>
                 </li>
@@ -110,7 +110,7 @@
         </li>		
         <!-- invoices -->
         <li>
-            <a href="#invoice">Invoice</a>
+            <a href="#invoice">Invoices</a>
             <ul class="nav nav-stacked">
                 <li><a href="#invoicejsonformat">JSON Format</a>
                 </li>
@@ -122,7 +122,7 @@
         </li>
         <!-- payments -->
         <li>
-            <a href="#payment">Payment</a>
+            <a href="#payment">Payments</a>
             <ul class="nav nav-stacked">
                 <li><a href="#paymentjsonformat">JSON Format</a>
                 </li>
